--- a/practica05/matematicas.html
+++ b/practica05/matematicas.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
-<html><head><title>Python: module factorial</title>
+<html><head><title>Python: module matematicas</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 </head><body bgcolor="#f0f0f8">
 
 <table width="100%" cellspacing=0 cellpadding=2 border=0 summary="heading">
 <tr bgcolor="#7799ee">
 <td valign=bottom>&nbsp;<br>
-<font color="#ffffff" face="helvetica, arial">&nbsp;<br><big><big><strong>factorial</strong></big></big></font></td
+<font color="#ffffff" face="helvetica, arial">&nbsp;<br><big><big><strong>matematicas</strong></big></big></font></td
 ><td align=right valign=bottom
-><font color="#ffffff" face="helvetica, arial"><a href=".">index</a><br><a href="file:/home/javi/Documentos/uco/docencia/docencia_2022-2023/FI/fi2022-2023/practica05/factorial.py">/home/javi/Documentos/uco/docencia/docencia_2022-2023/FI/fi2022-2023/practica05/factorial.py</a></font></td></tr></table>
-    <p><tt>Módulo&nbsp;que&nbsp;calcula&nbsp;el&nbsp;factorial</tt></p>
+><font color="#ffffff" face="helvetica, arial"><a href=".">index</a><br><a href="file:/home/javi/Documentos/uco/docencia/docencia_2022-2023/FI/fi2022-2023/practica05/matematicas.py">/home/javi/Documentos/uco/docencia/docencia_2022-2023/FI/fi2022-2023/practica05/matematicas.py</a></font></td></tr></table>
+    <p><tt>Módulo&nbsp;que&nbsp;calcula&nbsp;varias&nbsp;funciones&nbsp;matemáticas</tt></p>
 <p>
 <table width="100%" cellspacing=0 cellpadding=2 border=0 summary="section">
 <tr bgcolor="#eeaa77">
